cluster/monitoring/healthchecks/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: healthchecks
    app.kubernetes.io/version: 137ec6f
  name: healthchecks
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: healthchecks
  template:
    metadata:
      labels:
        app.kubernetes.io/name: healthchecks
        app.kubernetes.io/version: 137ec6f
    spec:
      imagePullSecrets:
      - name: forgejo-registry-secret
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - image: code.netbird.nathalie-stiefsohn.eu/my-homelab/healthchecks:137ec6f@sha256:3b8cdc665217348f54c8fc7baca289ad678d1ef5175599d2a3adaf15cb371516
        name: healthchecks
        ports:
        - containerPort: 8000
          name: http
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
        - mountPath: /opt/healthchecks/static-collected/CACHE
          name: pennant-volume
          readOnly: true
        resources:
          requests:
            cpu: 25m
            memory: 192Mi
          limits:
            cpu: 500m
            memory: 512Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 999
          runAsGroup: 999
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        readinessProbe:
          httpGet:
            path: /api/v3/status/
            port: 8000
          periodSeconds: 15
      volumes:
      - name: healthchecks-secret-guard-volume
        secret:
          secretName: healthchecks-secret
      - name: healthchecks-db-secret-guard-volume
        secret:
          secretName: healthchecks-db-secret
      - name: tmp-volume
        emptyDir: {}
      - name: pennant-script-volume
        configMap:
          name: healthchecks-pennant
      - name: pennant-volume
        emptyDir: {}
      securityContext:
        seccompProfile:
          type: RuntimeDefault
