cluster/monitoring/healthchecks/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: healthchecks
    app.kubernetes.io/version: 137ec6f
  name: healthchecks
spec:
  selector:
    app.kubernetes.io/name: healthchecks
  ports:
  - name: http
    port: 8000
    targetPort: 8000
