cluster/monitoring/healthchecks/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: healthchecks-networkpolicy
spec:
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: internal-gateway
      podSelector:
        matchExpressions:
        - key: app.kubernetes.io/name
          operator: In
          values:
          - internal-gateway
          - internal-gateway-secondary
          - blackbox-exporter
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - healthchecks
          - victoria-metrics
    ports:
    - port: 8000
      protocol: TCP
